# FilmDiary

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  middleware.py  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci_cd.yaml
calendar_events/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  urls_pages.py  views.py  views_pages.py
calendar_events/migrations/: 0001_initial.py  0002_remove_calendarevent_calendar_ev_planned_193081_idx_and_more.py  0003_remove_calendarevent_calendar_ev_planned_e83ccf_idx_and_more.py  0004_remove_calendarevent_calendar_ev_status_09589e_idx_and_more.py  0005_alter_calendarevent_options.py
calendar_events/tests/: conftest.py  test_events_permissions.py  test_events_serializer.py  test_events_task.py  test_events_views.py
common/: permissions.py
config/: celery_config.py  settings.py  urls.py
films/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
films/migrations/: 0001_initial.py  0002_load_tmdb_genres.py  0003_rename_is_favourite_film_is_favorite.py  0004_film_is_planned.py  0005_alter_film_unique_together_alter_film_tmdb_id_and_more.py  0006_remove_userfilm_is_planned.py  0007_alter_userfilm_options.py
films/services/: builders.py  context.py  save_film.py  search.py  tmdb_movie_payload.py  user_film_services.py  utils.py
films/tests/: conftest.py  test_builders.py  test_context.py  test_payload.py  test_save_film.py  test_search.py  test_tasks.py  test_user_film_services.py  test_utils.py  (+2 more)
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  middleware_py.html  status.json  z_069142de8efc1eec___init___py.html  z_069142de8efc1eec_conftest_py.html  z_069142de8efc1eec_test_commands_py.html  z_069142de8efc1eec_test_feedback_py.html  z_069142de8efc1eec_test_user_model_py.html  z_069142de8efc1eec_test_validators_py.html  z_069142de8efc1eec_test_views_activation_py.html  z_069142de8efc1eec_test_views_profile_py.html  z_069142de8efc1eec_test_views_register_py.html  z_0f04069749368e9d___init___py.html  z_0f04069749368e9d_conftest_py.html  z_0f04069749368e9d_test_events_permissions_py.html  z_0f04069749368e9d_test_events_serializer_py.html  z_0f04069749368e9d_test_events_task_py.html  z_0f04069749368e9d_test_events_views_py.html  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_create_manager_group_py.html  z_1df033120bbcc412_create_manager_py.html  z_1df033120bbcc412_create_superuser_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_config_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_2a00b332da8a274d___init___py.html  z_2a00b332da8a274d_conftest_py.html  z_2a00b332da8a274d_test_builders_py.html  z_2a00b332da8a274d_test_context_py.html  z_2a00b332da8a274d_test_payload_py.html  z_2a00b332da8a274d_test_save_film_py.html  z_2a00b332da8a274d_test_search_py.html  z_2a00b332da8a274d_test_tasks_py.html  z_2a00b332da8a274d_test_user_film_services_py.html  (+106 more)
reviews/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
services/: api_connect.py  cache_ttl.py  permissions.py  recomendations.py  recommendations.py  tmdb.py  tmdb_film.py
templates/: base.html  error_page.html
tests/: conftest.py  test_permissions.py  test_recommendations.py  test_recommendations_integration.py  test_tmdb.py
users/: admin.py  backends.py  models.py  tasks.py  urls.py  validators.py  views.py
(+123 files in other folders)
